Fix extra frames not being added for hidden animation layers

BUG:422525